--- a/houseofada/src/main/resources/application.properties
+++ b/houseofada/src/main/resources/application.properties
@@ -12,3 +12,22 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=8080
+
+
+cloudinary.cloud_name=druustu6t
+cloudinary.api_key=714148937624936
+cloudinary.api_secret=w8x9SWrNfN2hprk5tEGJUyAa43Q
+
+spring.redis.host=localhost
+spring.redis.port=6379
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=abhayphutela8@gmail.com
+spring.mail.password=hrws ofvl ywne hubd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
